--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,16 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js --config ./ormconfig.json"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.25",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.25"
