--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -1,16 +1,16 @@
 
 {
-    "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
-    "username": "shippify",
-    "password": "shippify",
-    "database": "shippify",
-    "entities": ["./src/company/models/*.ts", "./src/driver/models/*.ts", "./src/vehicle/models/*.ts"],
-    "migrations": [
-        "./src/database/migrations/*.ts"
-    ],
-    "cli": {
-        "migrationsDir": "./src/database/migrations/"
-    }
+  "type": "mysql",
+  "host": "localhost",
+  "port": 3306,
+  "username": "shippify",
+  "password": "shippify",
+  "database": "shippify",
+  "entities": ["./src/**/models/*.model.ts"],
+  "migrations": [
+      "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+      "migrationsDir": "./src/database/migrations/"
+  }
 }
