--- a/api/package.json
+++ b/api/package.json
@@ -15,11 +15,13 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.25"
+    "typeorm": "^0.2.31"
   }
 }
